--- a/excursion/index.html
+++ b/excursion/index.html
@@ -12,7 +12,18 @@
 <body>
 <h1>Discover hidden places in the world around you</h1>
 <p><a href="#">Download Excursion (Coming soon!)</a></p>
-
+<div>
+  <video autoplay="" muted="" loop="">
+    <source src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/videos/excursion.mp4" type="video/mp4"></source>
+  </video>
+</div>
+<h2>Your personal travel guide</h2>
+<p>Excursion remembers places you like, and recommends new points of interest around you.</p>
+<div><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/camp.jpg" alt=""></div>
+<div><img src="https://s3.amazonaws.com/codecademy-content/programs/freelance-one/excursion/images/phone.png" alt=""></div>
+<h2>Coming Soon for iPhone and Android</h2>
+<p><a href="#">Download Excursion (Coming soon!)</a></p>
+<p class="copyright">&copy; Excursion</p>
 </body>
 
 </html>
